fix: Force left-alignment for competition rules text and links

--- a/snek/style.css
+++ b/snek/style.css
@@ -78,7 +78,7 @@ html {
 }
 
 .intro-text.competition {
-    text-align: left;
+    text-align: left !important;
 }
 
 .intro-text.competition a {
